--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@ highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomor
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : Lee's Blogs
-description: > # this means to ignore newlines until "Language & timezone"
-  Java is the best programming language in the world (
-
+description: Easy cv # this means to ignore newlines until "Language & timezone"
+  
 
 ## => Language and Timezone
 ##############################
@@ -122,7 +121,7 @@ comments:
 
   ## Disqus
   disqus:
-    shortname: bugleesir # the Disqus shortname for the site
+    shortname: bugleesir# the Disqus shortname for the site
 
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
